// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LabInfo when labResults is DisplayDataProps[] should match snapshot test 1`] = `
<div>
  <div
    class="margin-top-0"
  >
    <div
      class="padding-bottom-3"
    >
      <div
        class="usa-summary-box__body"
      >
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="lab-results-from-unknown-organization"
          >
            Lab Results from Unknown Organization
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="data-title padding-right-1"
                >
                  Number of Results
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  1
                </div>
              </div>
              <div
                class="section__line_gray"
              />
            </div>
            <div
              class="display-flex"
            >
              <div
                class="margin-left-auto padding-top-1"
              >
                <button
                  class="usa-button usa-button--unstyled"
                  data-testid="button"
                  type="button"
                >
                  Expand all 
                  labs
                </button>
                <span
                  class="vertical-line"
                />
                <button
                  class="usa-button usa-button--unstyled"
                  data-testid="button"
                  type="button"
                >
                  Collapse all 
                  labs
                </button>
              </div>
            </div>
            <div
              class="usa-accordion accordion-rr margin-bottom-3"
              data-allow-multiple="true"
              data-testid="accordion"
            >
              <h5
                class="usa-accordion__heading side-nav-ignore"
              >
                <button
                  aria-controls="sars-cov-2-covid-19-rna-presence-in-respiratory-system-specimen-by-naa-with-probe-detection-r:id-0"
                  aria-expanded="false"
                  class="usa-accordion__button"
                  data-testid="accordionButton_sars-cov-2-covid-19-rna-presence-in-respiratory-system-specimen-by-naa-with-probe-detection-r:id-0"
                  type="button"
                >
                  <div
                    class="display-flex flex-row flex-justify flex-align-center gap-05"
                  >
                    <span>
                      SARS-CoV-2 (COVID-19) RNA [Presence] in Respiratory system specimen by NAA with probe detection
                    </span>
                    <span
                      class="text-base flex-shrink-0"
                      style="font-size: 1rem;"
                    />
                  </div>
                </button>
              </h5>
              <div
                class="usa-accordion__content usa-prose side-nav-ignore"
                data-testid="accordionItem_sars-cov-2-covid-19-rna-presence-in-respiratory-system-specimen-by-naa-with-probe-detection-r:id-0"
                hidden=""
                id="sars-cov-2-covid-19-rna-presence-in-respiratory-system-specimen-by-naa-with-probe-detection-r:id-0"
              >
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Available lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Status
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      final
                    </div>
                  </div>
                </div>
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Unavailable lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Observation Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Analysis Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Received Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Specimen (Source)
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Anatomical Location/Laterality
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Method/Volume
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Resulting Agency Comment
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Authorizing Provider
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Type
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Narrative
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LabInfo when labResults is LabReportElementData[] should match snapshot test 1`] = `
<div>
  <div
    class="margin-top-0"
  >
    <div
      class="padding-bottom-3"
    >
      <div
        class="usa-summary-box__body"
      >
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="lab-results-from-unknown-organization"
          >
            Lab Results from Unknown Organization
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="data-title padding-right-1"
                >
                  Lab Address
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  501 S. Sand Street
Mos Eisley, CO 00055
                </div>
              </div>
              <div
                class="section__line_gray"
              />
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="data-title padding-right-1"
                >
                  Number of Results
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  2
                </div>
              </div>
              <div
                class="section__line_gray"
              />
            </div>
            <div
              class="display-flex"
            >
              <div
                class="margin-left-auto padding-top-1"
              >
                <button
                  class="usa-button usa-button--unstyled"
                  data-testid="button"
                  type="button"
                >
                  Expand all 
                  labs
                </button>
                <span
                  class="vertical-line"
                />
                <button
                  class="usa-button usa-button--unstyled"
                  data-testid="button"
                  type="button"
                >
                  Collapse all 
                  labs
                </button>
              </div>
            </div>
            <div
              class="usa-accordion accordion-rr margin-bottom-3"
              data-allow-multiple="true"
              data-testid="accordion"
            >
              <h5
                class="usa-accordion__heading side-nav-ignore"
              >
                <button
                  aria-controls="stool-pathogens-naat-12-to-25-targets-r:id-0"
                  aria-expanded="false"
                  class="usa-accordion__button"
                  data-testid="accordionButton_stool-pathogens-naat-12-to-25-targets-r:id-0"
                  type="button"
                >
                  <div
                    class="display-flex flex-row flex-justify flex-align-center gap-05"
                  >
                    <span>
                      STOOL PATHOGENS, NAAT, 12 TO 25 TARGETS
                      <span
                        class="usa-tag margin-left-105"
                        data-testid="tag"
                        style="background: rgb(181, 9, 9);"
                      >
                        Abnormal
                      </span>
                    </span>
                    <span
                      class="text-base flex-shrink-0"
                      style="font-size: 1rem;"
                    >
                      02/04/2000 3:51 PM EST
                    </span>
                  </div>
                </button>
              </h5>
              <div
                class="usa-accordion__content usa-prose side-nav-ignore"
                data-testid="accordionItem_stool-pathogens-naat-12-to-25-targets-r:id-0"
                hidden=""
                id="stool-pathogens-naat-12-to-25-targets-r:id-0"
              >
                <table
                  class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0"
                  data-testid="table"
                >
                  <thead>
                    <tr>
                      <th
                        class="table-header minw-10 width-40"
                        scope="col"
                      >
                        Component
                      </th>
                      <th
                        class="table-header minw-10 width-40"
                        scope="col"
                      >
                        Value
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Ref Range
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Test Method
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Result Status
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Lab Comment
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Campylobacter, NAAT
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Abnormal (Abnormal)
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Not Detected
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        LAB DEVICE: BIOFIRE® FILMARRAY® 2.0 SYSTEM
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        final
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Plesiomonas shigelloides, NAAT
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Not Detected
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Not Detected
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        LAB DEVICE: BIOFIRE® FILMARRAY® 2.0 SYSTEM
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        final
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Available lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Observation Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      02/04/2000 3:51 PM EST
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Analysis Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      09/28/2000 5:00 PM EDT
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      02/04/2000 3:51 PM EST
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Received Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      02/04/2000 3:51 PM EST
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Specimen (Source)
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Stool
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Anatomical Location/Laterality
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      STOOL SPECIMEN / Unknown
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Authorizing Provider
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Darth Test MD
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Type
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      MICROBIOLOGY - GENERAL ORDERABLES
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Status
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      final
                    </div>
                  </div>
                </div>
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Unavailable lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Method/Volume
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Resulting Agency Comment
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Narrative
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <h5
                class="usa-accordion__heading side-nav-ignore"
              >
                <button
                  aria-controls="stool-pathogens-12-to-25-targets-r:id-1"
                  aria-expanded="false"
                  class="usa-accordion__button"
                  data-testid="accordionButton_stool-pathogens-12-to-25-targets-r:id-1"
                  type="button"
                >
                  <div
                    class="display-flex flex-row flex-justify flex-align-center gap-05"
                  >
                    <span>
                      Stool Pathogens 12 To 25 Targets
                    </span>
                    <span
                      class="text-base flex-shrink-0"
                      style="font-size: 1rem;"
                    >
                      02/04/2000 3:51 PM EST
                    </span>
                  </div>
                </button>
              </h5>
              <div
                class="usa-accordion__content usa-prose side-nav-ignore"
                data-testid="accordionItem_stool-pathogens-12-to-25-targets-r:id-1"
                hidden=""
                id="stool-pathogens-12-to-25-targets-r:id-1"
              >
                <table
                  class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0"
                  data-testid="table"
                >
                  <thead>
                    <tr>
                      <th
                        class="table-header minw-10 width-40"
                        scope="col"
                      >
                        Component
                      </th>
                      <th
                        class="table-header minw-10 width-40"
                        scope="col"
                      >
                        Value
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Ref Range
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Test Method
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Result Status
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Lab Comment
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Campylobacter, NAAT
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Not Detected
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Not Detected
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        LAB DEVICE: BIOFIRE® FILMARRAY® 2.0 SYSTEM
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        final
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Plesiomonas shigelloides, NAAT
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Not Detected
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Not Detected
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        LAB DEVICE: BIOFIRE® FILMARRAY® 2.0 SYSTEM
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        final
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Available lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Observation Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      02/04/2000 3:51 PM EST
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Analysis Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      09/28/2000 4:59 PM EDT
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      02/04/2000 3:51 PM EST
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Received Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      02/04/2000 3:51 PM EST
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Specimen (Source)
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Stool
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Anatomical Location/Laterality
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      STOOL SPECIMEN / Unknown
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Authorizing Provider
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Darth Test MD
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Type
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      MICROBIOLOGY - GENERAL ORDERABLES
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Status
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      final
                    </div>
                  </div>
                </div>
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Unavailable lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Method/Volume
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Resulting Agency Comment
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Narrative
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gutter-3"
        >
          <h4
            class="usa-summary-box__heading padding-y-105"
            id="lab-results-from-coruscant-medical"
          >
            Lab Results from Coruscant Medical
          </h4>
          <div
            class="usa-summary-box__text"
          >
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="data-title padding-right-1"
                >
                  Lab Performing Name
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  Coruscant Medical
                </div>
              </div>
              <div
                class="section__line_gray"
              />
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="data-title padding-right-1"
                >
                  Lab Address
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  Apt 37
555 Medical Drive
Coruscant, MA 00010
USA
County: Empire
                </div>
              </div>
              <div
                class="section__line_gray"
              />
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="data-title padding-right-1"
                >
                  Number of Results
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  1
                </div>
              </div>
              <div
                class="section__line_gray"
              />
            </div>
            <div
              class="display-flex"
            >
              <div
                class="margin-left-auto padding-top-1"
              >
                <button
                  class="usa-button usa-button--unstyled"
                  data-testid="button"
                  type="button"
                >
                  Expand all 
                  labs
                </button>
                <span
                  class="vertical-line"
                />
                <button
                  class="usa-button usa-button--unstyled"
                  data-testid="button"
                  type="button"
                >
                  Collapse all 
                  labs
                </button>
              </div>
            </div>
            <div
              class="usa-accordion accordion-rr margin-bottom-3"
              data-allow-multiple="true"
              data-testid="accordion"
            >
              <h5
                class="usa-accordion__heading side-nav-ignore"
              >
                <button
                  aria-controls="cytogenomic-snp-microarray-r:id-0"
                  aria-expanded="false"
                  class="usa-accordion__button"
                  data-testid="accordionButton_cytogenomic-snp-microarray-r:id-0"
                  type="button"
                >
                  <div
                    class="display-flex flex-row flex-justify flex-align-center gap-05"
                  >
                    <span>
                      Cytogenomic SNP microarray
                    </span>
                    <span
                      class="text-base flex-shrink-0"
                      style="font-size: 1rem;"
                    >
                      05/05/1824 11:58 AM GMT-4:56:02
                    </span>
                  </div>
                </button>
              </h5>
              <div
                class="usa-accordion__content usa-prose side-nav-ignore"
                data-testid="accordionItem_cytogenomic-snp-microarray-r:id-0"
                hidden=""
                id="cytogenomic-snp-microarray-r:id-0"
              >
                <table
                  class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0"
                  data-testid="table"
                >
                  <thead>
                    <tr>
                      <th
                        class="table-header minw-10 width-40"
                        scope="col"
                      >
                        Component
                      </th>
                      <th
                        class="table-header minw-10 width-40"
                        scope="col"
                      >
                        Value
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Ref Range
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Test Method
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Result Status
                      </th>
                      <th
                        class="table-header minw-10 width-20"
                        scope="col"
                      >
                        Lab Comment
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Organism ID
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Acinetobacter baumannii
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Preliminary results
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <button
                          aria-controls="hidden-comment-r:id"
                          aria-expanded="false"
                          class="usa-button usa-button--unstyled"
                          data-test-id="comment-button"
                          data-testid="button"
                          type="button"
                        >
                          View
                           
                          comment
                        </button>
                      </td>
                    </tr>
                    <tr
                      hidden=""
                      id="hidden-comment-r:id"
                    >
                      <td
                        class="p-list"
                        colspan="6"
                      >
                        <div
                          class="border-top border-base-lighter margin-top-neg-105 margin-bottom-1"
                        />
                        <p>
                          <span
                            id="r:id"
                          >
                            A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A really long Lab comment. A r
                            ... 
                          </span>
                          <button
                            aria-controls="r:id"
                            aria-expanded="false"
                            class="usa-button usa-button--unstyled"
                            data-testid="button"
                            type="button"
                          >
                            View more (
                            3,699
                             characters total)
                          </button>
                        </p>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Sodium
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        139 mmol/L
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        138 mmol/L - 145 mmol/L
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        final
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        <span
                          class="text-italic text-base"
                        >
                          No data
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <table
                  class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin margin-y-0"
                  data-testid="table"
                >
                  <thead>
                    <tr>
                      <th
                        class="table-header"
                        scope="col"
                      >
                        Organism
                      </th>
                      <th
                        class="table-header"
                        scope="col"
                      >
                        Antibiotic
                      </th>
                      <th
                        class="table-header"
                        scope="col"
                      >
                        Method
                      </th>
                      <th
                        class="table-header"
                        scope="col"
                      >
                        Susceptibility
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Acinetobacter baumannii
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Amikacin
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        MIC
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        0.25: Susceptible
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Acinetobacter baumannii
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Avycaz (Ceftazidime/Avibactam)
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        MIC
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        0.05: Intermediate
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="text-top text-pre-line"
                      >
                        Acinetobacter baumannii
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        Levofloxacin
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        MIC
                      </td>
                      <td
                        class="text-top text-pre-line"
                      >
                        0.75: Resistant
                      </td>
                    </tr>
                  </tbody>
                </table>
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Available lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Observation Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      05/05/1824 11:58 AM GMT-4:56:02
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      05/05/1824 11:58 AM GMT-4:56:02
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Received Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      02/03/2000 2:46 PM EST
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Specimen (Source)
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Blood
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Collection Method/Volume
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Collection / Unknown
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Resulting Agency Comment
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <p>
                        testing comment
                      </p>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Authorizing Provider
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Jar Jar Bink MD
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Type
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      LAB GENETIC TESTING
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Result Status
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      Preliminary results
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Narrative
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <p>
                        Gungan Swamp Lab - 04/18/1497 2:57 PM CDT
                      </p>
                      <p>
                         MICROARRAY REPORT NARRATIVE
                      </p>
                    </div>
                  </div>
                </div>
                <h6
                  class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
                >
                  Unavailable lab information
                </h6>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Analysis Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                  <div
                    class="section__line_gray"
                  />
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="data-title padding-right-1"
                    >
                      Anatomical Location/Laterality
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list lab-text-content"
                    >
                      <span
                        class="text-italic text-base"
                      >
                        No data
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
